[package]
name = "proxy_checker"
version = "0.1.0"
edition = "2024"

[dependencies]
tokio = { version = "1", features = ["full"] }
reqwest = { version = "0.11", features = ["json", "rustls-tls", "socks"] } # rustls-tls untuk TLS, socks untuk proxy SOCKS
rayon = "1.5"
serde = { version = "1.0", features = ["derive"] }
serde_json = "1.0"
regex = "1"
futures = "0.3" # Untuk JoinAll
